--- a/PA1_doc.Rmd
+++ b/PA1_doc.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## What is it required?
 
 * Code for reading in the dataset and/or processing the data
 * Histogram of the total number of steps taken each day
@@ -20,7 +20,6 @@ knitr::opts_chunk$set(echo = TRUE)
 * Histogram of the total number of steps taken each day after missing values are imputed
 * Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
 * All of the R code needed to reproduce the results (numbers, plots, etc.) in the report
-
 
 ```{r }
 
@@ -44,6 +43,13 @@ df$weekday <- sapply(df$date, function(x) {
 
 df$weekday <- as.factor(df$weekday)
 
+```
+
+# Analysis including missing values
+
+## Histogram, mean and median
+
+```{r }
 # first analysis include all nas
 df_na <- df[!is.na(df$steps),]
 
@@ -55,22 +61,46 @@ ggplot(s, aes(total_steps)) + geom_histogram(bins=50)
 
 # calculate mean and median
 summary(s$total_steps)
+```
+
+## Interval plot excluding missing values
+
+```{r }
+
 
 # calculate the average per time interval
 t <- df_na %>% group_by(interval) %>% summarise(records=n(), average_steps=mean(steps), total_steps=sum(steps))
 
 # plot the lines using ggplot2
 ggplot(t, aes(x=interval, y=average_steps)) + geom_line()
+```
 
+## Which time interval contains the highest on average?
+
+830 minutes.
+
+```{r }
 # which on average contains the max?
-head(t[order(-t$average_steps),])
+head(t[order(-t$average_steps),], 1)
 #835
+```
 
+## Define a strategy to complete missing cases
+
+The strategy to follow is to use the average of the interval.
+
+For that we use the match function. First, we asses the size of the issue:
+
+```{r }
 # analyse number of complete cases vs with nas
 x <- c(length(df[!is.na(df$steps),]$steps), length(df[is.na(df$steps),]$steps))
 names(x) <- c("Complete Cases", "With NAs")
 barplot(x)
+```
 
+And after excuting the cleaning process we validate the results:
+
+```{r }
 # fill the na's with values using a simple strategy, substitute using the average of the 
 # interval average
 df_fill <- df
@@ -81,6 +111,11 @@ x <- c(length(df_fill[!is.na(df_fill$steps),]$steps), length(df_fill[is.na(df_fi
 names(x) <- c("Complete Cases", "With NAs")
 barplot(x)
 
+```
+
+## Histogram, mean and median
+
+```{r }
 ##################################################################
 #  We repeat the whole analysis for the dataset without NAs
 
@@ -94,15 +129,23 @@ ggplot(s2, aes(total_steps)) + geom_histogram(bins=50)
 # calculate mean and median
 summary(s2$total_steps)
 
+```
+
+## Interval plot excluding missing values
+
+```{r }
+
 # calculate the average per time interval
 t2 <- df_fill %>% group_by(interval) %>% summarise(records=n(), average_steps=mean(steps), total_steps=sum(steps))
 
 # plot the lines using ggplot2
 ggplot(t2, aes(x=interval, y=average_steps)) + geom_line()
 
-# which on average contains the max?
-head(t2[order(-t2$average_steps),])
+```
 
+## Analyze weekdays & weekend pattern
+
+```{r }
 ##################################################################
 # Identify patterns on weekdays vs weekends
 
@@ -115,13 +158,3 @@ ggplot(t3, aes(x=interval, y=average_steps, color=weekday)) + geom_line() + face
 
 
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
